Z-index issue fixed and somehow resposnsiveness too

--- a/src/pages/SimulationPage/SimulationPage.css
+++ b/src/pages/SimulationPage/SimulationPage.css
@@ -3,6 +3,7 @@ body {
   background-color: #f5f5f5;
   color: #333;
   margin: 0;
+  overflow: hidden;
   line-height: 1.5;
 }
 
