--- a/src/pages/SimulationPage/components/SimulationForm/Form.css
+++ b/src/pages/SimulationPage/components/SimulationForm/Form.css
@@ -1,7 +1,7 @@
 /* Simulation Form Component */
 .simulation-form {
     display: flex;
-    height: 10vw;
+    height: 20vh;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
@@ -69,7 +69,7 @@ label {
 
 /* Option Styles */
 .dropdown-content option {
-    padding: 10vw;
+    padding: 1vw;
     background-color: #fff;
     color: #333;
 }
@@ -120,14 +120,14 @@ label {
 }
 
 
-.container {
+/* .container {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
-    height: 8vh;
+    height: auto;
     padding: 2.5rem;
     background-color: #ffffff;
-}
+} */
 
 .heading {
     width: 16vw;
@@ -191,9 +191,9 @@ label {
 }
 
 /* Reverse the order of collapsible sections */
-.container {
+/* .container {
     flex-direction: column-reverse;
-}
+} */
 
 /* Reverse the order of collapsible sections */
 .collapsible-content {
@@ -205,9 +205,9 @@ label {
 }
 
 /* Reverse the order of collapsible sections */
-.container {
+/* .container {
     flex-direction: column-reverse;
-}
+} */
 
 
 /* Reverse the order of collapsible sections */
@@ -235,10 +235,10 @@ label {
 .container {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
-    height: 1vh;
+    overflow: scroll;
+    height: 67vh;
     padding: 1.25rem;
-    /* background-color: #f5f5f5; */
+    background-color: #f5f5f5;
 }
 
 
@@ -276,23 +276,25 @@ label {
 }
 
 /* Additional styles for collapsible sections */
-.collapsible-content {
+/* .collapsible-content {
     margin-bottom: 1.25rem;
     background-color: #f9f9f9;
     padding: 0.625rem;
     border-radius: 0.313rem;
     box-shadow: 0 0.125rem 0.313rem rgba(0,0,0,0.2);
-}
+} */
 
 .flex-container {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
-    display: flex;
+    /* display: flex; */
     flex-wrap: nowrap;
 }
 
 .button-container {
     display: flex;
+    height: 20vw;
+    top: 20vw;
     /* justify-content: space-between; Adjust as needed to control spacing between buttons */
 }
 
